test/error/E48.1.chigfn
{
	"type": "function",
	"name": "helloworld",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": 32
}
